--- a/style.css
+++ b/style.css
@@ -1,4 +1,80 @@
-body {background-color:tan;}
-h1{color:green;}
+body 
+{
+    margin-top: 10%;
+    background-color: #000000;
+    color: #ffffff;
+    font-family:'Times New Roman', Times, serif;
+}
 
+h1
+{
+    color: rgb(41, 74, 112);
+    padding-left: 10px;
+    font-family: Verdana;
+}
 
+.maindiv
+{
+    background-color: #ffffff;
+    color: #000000;
+    width: 500px;
+    padding: 20px;
+    border-radius: 25px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+/* #result
+{
+    display: none;
+} */
+
+.contents
+{
+    margin-left: 80px;
+}
+
+table td
+{
+    padding-bottom: 10px;
+}
+
+#compute
+{
+    margin-bottom: 10px;
+    background-color:rgb(41, 74, 112);
+    color: white;
+    font-weight: 700;
+    border: none;
+    height: 40px;
+    width: 325px;
+}
+#principal{
+    height: 25px;
+    width: 190px;
+}
+
+#years{
+    height: 35px;
+    width: 200px;
+}
+
+#footer
+{
+    margin-top: 10px;
+}
+
+.labels
+{
+    width: 120px;
+}
+
+.highlight
+{
+    background-color: rgba(131, 174, 224, 0.911);
+}
+.copyright{
+    padding-left: 75px;
+    font-weight: 900;
+    padding-top: 15px;
+}
