--- a/style.css
+++ b/style.css
@@ -66,7 +66,9 @@ table td
 
 .labels
 {
-    width: 120px;
+/*     width: 120px; */
+    font-weight:700;
+    color: 2px solid black;
 }
 
 .highlight
